--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 
 		<div id="banner">
-			<center><img src="https://dl.dropbox.com/s/wkru5j9sm1kqo2u/SRUClogo.png?" width="200" height="200">
+			<center><img src="img/SRUClogo.png?" width="200" height="200">
 			<h1>SRUC <i>Invite-a-Scientist</i> Student Competition</h1>
 			<p> </p><h2>2015/16 Pan Seminar Series</h2>
 		</div>
