--- a/registration_successful.html
+++ b/registration_successful.html
@@ -4,7 +4,7 @@
 <html>
 	<head>
 		<title>
-			SRUC Student Competition 2015/16
+			SRUC Student Competition 2015/16 - REGISTRATION SUCCESSFUL
 		</title>
 	</head>
 	
@@ -12,8 +12,9 @@
 
 		<div id="banner">
 			<center><img src="https://dl.dropbox.com/s/wkru5j9sm1kqo2u/SRUClogo.png?" width="200" height="200">
-			<h1>SRUC <i>Invite-a-Scientist</i> Student Competition</h1>
-			<p> </p><h2>2015/16 Pan Seminar Series</h2>
+			<h1>SRUC Temple Grandin Visit</h1>
+			<p> </p><h2>You have successfully registered your interest to atend this event. 
+				If your application is successful you will be notified by email and receive a ticket.</h2>
 		</div>
 
 
