--- a/registration_successful.html
+++ b/registration_successful.html
@@ -11,10 +11,11 @@
 	<body>
 
 		<div id="banner">
-			<center><img src="https://dl.dropbox.com/s/wkru5j9sm1kqo2u/SRUClogo.png?" width="200" height="200">
-			<h1>SRUC Temple Grandin Visit</h1>
-			<p> </p><h2>You have successfully registered your interest to atend this event. 
-				If your application is successful you will be notified by email and receive a ticket.</h2>
+			<center><img src="img/SRUClogo.png" width="200" height="200">
+				<h1>SRUC Temple Grandin Visit</h1></br>
+			
+			<p> </p><h3>You have successfully registered your interest to atend this event. 
+				If your application is successful you will be notified by email and receive a ticket.</h3>
 		</div>
 
 
