--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		</div>
 
 
-		<form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
+		<center><form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Ticket Request" />
-  			<input type="text" name="name" placeholder="Your Name">
-  			<input type="email" name="email" placeholder="Your email">
+  			<input type="text" name="name" placeholder="Your Name"></br>
+  			<input type="email" name="email" placeholder="Your email"></br>
   			<p></p>
   			<input type="radio" name="position" id="undergrad" value="Undergraduate" >
   				<label for="undergrad">Undergraduate</label>
@@ -33,14 +33,14 @@
   				<label for="Postdoc">Postdoc (early career)</label>
 				</br>
   			<input type="radio" name="day" id="staff_other" value="Staff">
-  				<label for="staff_other">Staff</label>
+  				<label for="staff_other">Staff</label></br>
 			  <p></p>
-  			<input type="text" name="institution" placeholder="Your Institution">
-  			<input type="text" name="degree" placeholder="Degree Course">
+  			<input type="text" name="institution" placeholder="Your Institution"></br>
+  			<input type="text" name="degree" placeholder="Degree Course"></br>
   			<input type="text" name="_gotcha" style="display:none" />
   			<button type="submit">Register</button>
   			<input type="hidden" name="_next" value="https://sdsruc.github.io/registration_successful" />
-		</form>
+		</form></center>
 
 
 
