--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<title>
 			SRUC Temple Grandin visit - Feb 2017
 		</title>
+		
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	
 	<body>
@@ -16,7 +19,9 @@
 		</div>
 
 
-		<center><form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
+<div id="main-wrap">
+    <div id="sidebar">
+	    <form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Ticket Request" />
   			<input type="text" name="name" placeholder="Your Name"></br>
 				<p></p>
@@ -41,9 +46,19 @@
   			<input type="text" name="_gotcha" style="display:none" />
   			<button type="submit">Register</button>
   			<input type="hidden" name="_next" value="https://sdsruc.github.io/registration_successful" />
-		</form></center>
+		</form>
+    </div>
+
+    	<div id="content-wrap">
+		<p>Testing using emacs! </p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque massa ligula, varius et diam sagittis, egestas rhoncus urna. Ut quis lacinia lacus, at egestas turpis. Aenean tincidunt lacus magna, at condimentum tortor bibendum eget. Praesent semper purus et venenatis ultricies. In euismod, ante at rutrum commodo, lectus ligula commodo elit, nec vulputate tellus purus et nibh. Proin tortor lectus, lacinia sed maximus eget, sodales non leo. Integer sit amet tellus consectetur, euismod metus at, aliquet urna. Etiam venenatis mauris a elementum accumsan. Sed tempor urna id laoreet volutpat. Sed purus sapien, accumsan tristique purus sed, rutrum lacinia lectus. Ut sit amet eleifend justo, quis tincidunt est. Ut et lectus quis nunc fringilla pellentesque nec ac urna. Fusce quis cursus urna.</p>
+		<p>Sed ac ultrices ipsum. Suspendisse eget nisl a enim pretium consequat. Quisque iaculis, orci eget tincidunt cursus, urna risus luctus felis, quis porta nulla metus ut nunc. Ut eget cursus orci. Maecenas eget felis nec lectus aliquam auctor at ac nulla. Nulla facilisi. Proin faucibus molestie aliquet.</p>
+	</div>
+</div>		
+
+		
 
 
 
-		</body>
+</body>
 </html>
