--- a/registration_successful.html
+++ b/registration_successful.html
@@ -13,12 +13,13 @@
 		<div id="banner">
 			<center><img src="img/SRUClogo.png" width="200" height="200">
 				<h1>SRUC Temple Grandin Visit</h1></br>
-			
-			<p> </p><h3>You have successfully registered your interest to atend this event. 
-				If your application is successful you will be notified by email and receive a ticket.</h3>
 		</div>
 
-
+		<div id="main-wrap">
+			<h3>You have successfully registered your interest to atend this event. 
+			If your application is successful you will be notified by email and receive a ticket.
+			</h3>
+		</div>
 
 
 
