--- a/registration_successful.html
+++ b/registration_successful.html
@@ -1,11 +1,13 @@
-
-
-
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>
 			SRUC Student Competition 2015/16 - REGISTRATION SUCCESSFUL
 		</title>
+		
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		
 	</head>
 	
 	<body>
@@ -14,15 +16,17 @@
 			<center><img src="img/SRUClogo.png" width="200" height="200">
 				<h1>SRUC Temple Grandin Visit</h1></br>
 		</div>
-
+		
 		<div id="main-wrap">
-			<h3>You have successfully registered your interest to atend this event. 
-			If your application is successful you will be notified by email and receive a ticket.
-			</h3>
+    			<div id="sidebar">
+			
+			</div>
+    			<div id="content-wrap">
+				<h3>You have successfully registered your interest to atend this event. 
+					If your application is successful you will be notified by email and receive a ticket.
+				</h3>
+			</div>
 		</div>
 
-
-
-
-		</body>
+	</body>
 </html>
