--- a/registration_successful.html
+++ b/registration_successful.html
@@ -18,14 +18,14 @@
 		</div>
 		
 		<div id="main-wrap">
-    			<div id="sidebar">
+    			<!--<div id="sidebar">
 			
 			</div>
-    			<div id="content-wrap">
+    			<div id="content-wrap">-->
 				<h3>You have successfully registered your interest to atend this event. 
 					If your application is successful you will be notified by email and receive a ticket.
 				</h3>
-			</div>
+			<!--</div>-->
 		</div>
 
 	</body>
