--- a/registration_successful.html
+++ b/registration_successful.html
@@ -12,7 +12,7 @@
 	
 	<body>
 
-		<div id="banner">
+		<div id="main-wrap">
 			<center><img src="img/SRUClogo.png" width="200" height="200">
 				<h1>SRUC Temple Grandin Visit</h1></br>
 		</div>
