--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<body>
 
-		<div id="banner">
+		<div id="main-wrap">
 			<center><img src="img/SRUClogo.png" width="200" height="200">
 			<h1>SRUC Temple Grandin vist</h1>
 				</br>
