--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="sidebar">
 	    <form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Ticket Request" />
+		    	<input type="hidden" name="_cc" value="stephanie.smith@sruc.ac.uk.com,scott@scotaku.com" />
   			<input type="text" name="name" placeholder="Your Name"></br>
 				<p></p>
   			<input type="email" name="email" placeholder="Your email"></br>
