--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>
 			SRUC Temple Grandin visit - Feb 2017
 		</title>
-		
+		<meta name="referrer" content="origin" />
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
