--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   			<input type="radio" name="position" id="postgrad" value="Postgraduate">
   				<label for="postgrad">Postgraduate</label>
 				</br>
-  			<input type="radio" name="day" id="Postdoc" value="Postdoc">
+  			<input type="radio" name="position" id="Postdoc" value="Postdoc (early career)">
   				<label for="Postdoc">Postdoc (early career)</label>
 				</br>
-  			<input type="radio" name="day" id="staff_other" value="Staff">
+  			<input type="radio" name="position" id="staff_other" value="Staff">
   				<label for="staff_other">Staff</label></br>
 			  <p></p>
   			<input type="text" name="institution" placeholder="Your Institution"></br>
