--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<center><img src="img/SRUClogo.png" width="200" height="200">
 			<h1>SRUC Temple Grandin vist</h1>
 				</br>
-			<h2>2015/16 Pan Seminar Series</h2>
+			<h2>February 14th - 16th 2017 @ The Roslin Institute Building</h2>
 		</div>
 
 
