--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="main-wrap">
     <div id="sidebar">
-	    <p> Please register your interest to attend event below</p>
+	    <p> Please register your interest to attend event by submitting the form below:</p>
 	    <form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Temple Grandin Visit Ticket Request" />
 		    	<input type="hidden" name="_cc" value="stephanie.smith@sruc.ac.uk" />
