--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
 
     	<div id="content-wrap">
 		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center>
-		<p>Testing text! </p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque massa ligula, varius et diam sagittis, egestas rhoncus urna. Ut quis lacinia lacus, at egestas turpis. Aenean tincidunt lacus magna, at condimentum tortor bibendum eget. Praesent semper purus et venenatis ultricies. In euismod, ante at rutrum commodo, lectus ligula commodo elit, nec vulputate tellus purus et nibh. Proin tortor lectus, lacinia sed maximus eget, sodales non leo. Integer sit amet tellus consectetur, euismod metus at, aliquet urna. Etiam venenatis mauris a elementum accumsan. Sed tempor urna id laoreet volutpat. Sed purus sapien, accumsan tristique purus sed, rutrum lacinia lectus. Ut sit amet eleifend justo, quis tincidunt est. Ut et lectus quis nunc fringilla pellentesque nec ac urna. Fusce quis cursus urna.</p>
-		<p>Sed ac ultrices ipsum. Suspendisse eget nisl a enim pretium consequat. Quisque iaculis, orci eget tincidunt cursus, urna risus luctus felis, quis porta nulla metus ut nunc. Ut eget cursus orci. Maecenas eget felis nec lectus aliquam auctor at ac nulla. Nulla facilisi. Proin faucibus molestie aliquet.</p>
+		<p>Welcome!</p>
+		<p>SRUC warmly welcomes Prof. Temple Grandin () for a very special seminar on Wednesday 15th of February.</p></br>
+		<p>Prof. Temple Grandin Seminar</br>
+			Date: Wednesday 15th</br> 
+			Time: 1500</br> 
+                        Location: The Auditorium, Roslin Institute Building, Easter Bush, EH25 9RG</p>
+</p>
 	</div>
 </div>		
 
