--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
 			Date: Wednesday 15th</br> 
 			Time: 1500</br> 
                         Location: The Auditorium, Roslin Institute Building, Easter Bush, EH25 9RG</p>
-</p>
+		<p>This channel will be open for you to register until ... ??</p>
+		<p>After this point it will be closed and tickets will be allocated to SRUC students across all categories as a priority, 
+			followed by SRUC staff and other students. </br>
+			Around this time you will receive confirmation of whether or not you have been successfully allocated a ticket.<p>
+
+		<p>Kind regards, </br> Steph &mp; Scott</p>
+
 	</div>
 </div>		
 
