--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     	<div id="content-wrap">
 		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center>
 		<p>Welcome!</p>
-		<p>SRUC warmly welcomes Prof. Temple Grandin () for a very special seminar on Wednesday 15th of February.</p></br>
+		<p>SRUC warmly welcomes Prof. Temple Grandin () for a very special seminar on Wednesday 15th of February.</p>
 		<p>Prof. Temple Grandin Seminar</br>
 			Date: Wednesday 15th</br> 
 			Time: 1500</br> 
@@ -60,7 +60,7 @@
 			followed by SRUC staff and other students. </br>
 			Around this time you will receive confirmation of whether or not you have been successfully allocated a ticket.<p>
 
-		<p>Kind regards, </br> Steph &mp; Scott</p>
+		<p>Kind regards, </br> Steph &amp; Scott</p>
 
 	</div>
 </div>		
