--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<center><img src="img/SRUClogo.png" width="200" height="200">
 			<h1>SRUC Temple Grandin vist</h1>
 				</br>
-			<h2>February 14th - 16th 2017 @ The Roslin Institute Building</h2>
+			<h2>Wednesday 14th Feb 2017 @ The Roslin Institute Building</h2>
 		</div>
 
 
@@ -48,8 +48,8 @@
     </div>
 
     	<div id="content-wrap">
-		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center>
-		<p>Welcome!</p>
+		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center></br>
+		<h3>Welcome!</h3>
 		<p>SRUC warmly welcomes Prof. Temple Grandin () for a very special seminar on Wednesday 15th of February.</p>
 		<p>Prof. Temple Grandin Seminar</br>
 			Date: Wednesday 15th</br> 
