--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     				<option value="Staff">Staff</option>
 			</select></br>
 			  <p></p>
-  			<input type="text" name="institution" placeholder="Your Institution"></br>
+  			<input type="text" name="institution" placeholder="Your Institution" required></br>
 				<p></p>
   			<input type="text" name="degree" placeholder="Degree Course"></br>
 				<p></p>
