--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			  <p></p>
   			<input type="text" name="institution" placeholder="Your Institution" required></br>
 				<p></p>
-  			<input type="text" name="degree/research" placeholder="Degree Course (or research field)" required></br>
+  			<input type="text" name="degree/research" placeholder="Degree Course (or research)" required></br>
 				<p></p>
   			<input type="text" name="_gotcha" style="display:none" />
   			<button type="submit">Register</button>
