--- a/registration_successful.html
+++ b/registration_successful.html
@@ -22,7 +22,7 @@
 			
 			</div>
     			<div id="content-wrap">-->
-				<center><h3>You have successfully registered your interest to atend this event. 
+				<center><h3>You have successfully registered your interest to attend this event. 
 					If your application is successful you will be notified by email and receive a ticket.
 				</h3>
 			<!--</div>-->
