--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     	<div id="content-wrap">
 		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center></br>
 		<h3>Welcome!</h3>
-		<p>SRUC warmly welcomes Prof. Temple Grandin () for a very special seminar on Wednesday 15th of February.</p>
+		<p>SRUC warmly welcomes internationally renowned animal scientist Prof. Temple Grandin (<a href="http://www.templegrandin.com/">www.templegrandin.com</a>) for a very special seminar on Wednesday 15th of February.</p>
 		<p>Prof. Temple Grandin Seminar</br>
 			Date: Wednesday 15th</br> 
 			Time: 1500</br> 
