--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
   			<input type="text" name="degree/research  " placeholder="Degree Course (or research)" required></br>
 				<p></p>
   			<input type="text" name="_gotcha" style="display:none" />
+                        <input type="hidden" name="tracking-code" id="demo" value= <p id="demo"></p>/>
   			<button type="submit">Register</button>
   			<input type="hidden" name="_next" value="https://sdsruc.github.io/registration_successful" />
-                        <input type="datetime" id="time"  value="<?php echo date("Y-m-d\TH:i:s",$timestamp); ?>"/>
 		</form>
+<script>
+var d = new Date();
+document.getElementById("demo").innerHTML = d;
+</script>
     </div>
 
     	<div id="content-wrap">
