--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			Date: Wednesday 15th</br> 
 			Time: 1500</br> 
                         Location: The Auditorium, Roslin Institute Building, Easter Bush, EH25 9RG</p>
-		<p>This registration page will be open for you to register until Friday 20th January 2017 ??</p>
+		<p>This registration page will be open for you to register until Friday 20th January 2017</p>
 		<p>After this point it will be closed and tickets will be allocated to SRUC students across all categories as a priority, 
 			followed by SRUC staff and other students. </br>
 			Around this time you will receive confirmation of whether or not you have been successfully allocated a ticket.<p>
