--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		    	<input type="hidden" name="_cc" value="stephanie.smith@sruc.ac.uk" />
   			<input type="text" name="name" placeholder="Your Name" required></br>
 				<p></p>
-  			<input type="email" name="email" placeholder="Your email" required></br>
+  			<input type="email" name="email" placeholder="Your email (.ac.uk)" required></br>
   				<p></p>
   			<select name="position" id="position" required> 
     				<option value="">Please select</option>
