--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 <div id="main-wrap">
     <div id="sidebar">
 	    <p> Please register your interest to attend event by submitting the form below:</p>
+	    <!--<p> Registration for tickets is now closed.
+		    If you regitered your interest for a ticket you will be notified by email whether or not you were successful. 
+		    If successful you will also be emailed your ticket.
+	    </p> -->
 	    <form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Temple Grandin Visit Ticket Request" />
 		    	<input type="hidden" name="_cc" value="stephanie.smith@sruc.ac.uk" />
