--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="main-wrap">
     <div id="sidebar">
-	    <p> Please register your interest to attend event by submitting the form below:</p>
+	    <p align='justify'> Please register your interest to attend event by submitting the form below:</p>
 	    <!--<p> Registration for tickets is now closed.
 		    If you regitered your interest for a ticket you will be notified by email whether or not you were successful. 
 		    If successful you will also be emailed your ticket.
