--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
 <div id="main-wrap">
     <div id="sidebar">
-	    <p align='justify'> Please register your interest to attend event by submitting the form below:</p>
-	    <!--<p> Registration for tickets is now closed.
+	    <!--<p align='justify'> Please register your interest to attend event by submitting the form below:</p>-->
+	    <p> Registration for tickets is now closed.
 		    If you regitered your interest for a ticket you will be notified by email whether or not you were successful. 
 		    If successful you will also be emailed your ticket.
-	    </p> -->
-	    <form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
+	    </p> 
+	   <!-- <form method="POST" action="http://formspree.io/enter-email-address">
   			<input type="hidden" name="_subject" value="Temple Grandin Visit Ticket Request" />
-		    	<input type="hidden" name="_cc" value="stephanie.smith@sruc.ac.uk" />
+		    	<input type="hidden" name="_cc" value="enter Cc email address" />
   			<input type="text" name="name" placeholder="Your Name" required></br>
 				<p></p>
   			<input type="email" name="email" placeholder="Your email (ending .ac.uk)" required></br>
@@ -50,7 +50,7 @@
   			<input type="text" name="_gotcha" style="display:none" />
   			<button type="submit">Register</button>
   			<input type="hidden" name="_next" value="https://sdsruc.github.io/registration_successful" />
-		</form>
+		</form> -->
     </div>
 
     	<div id="content-wrap">
