--- a/index.html
+++ b/index.html
@@ -68,25 +68,28 @@
 
 		<p>Kind regards, </br> Steph &amp; Scott</p>
 		
-		  <form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
+		  <center><form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Temple Grandin - Post Seminar Survey" />
 		    	<!--<input type="hidden" name="_cc" value="enter Cc email address" /> -->
-			  <h2>1. Did today’s seminar meet your expectations? If yes, please let us know the main thing you learnt from the event, 
-				  if not please let us know the main reason why?</h2>
-			<input type="text" name="Q1" placeholder=" " required></br>
+			<h3>1. Did today’s seminar meet your expectations? If yes, please let us know the main thing you learnt from the event, 
+				  if not please let us know the main reason why?</h3>
+			<input type="text" name="Q1" placeholder="Comments" required></br>
 				<p></p>
-			<input type="text" name="Q2" placeholder=" " required></br>
+			<h3>2. What, if anything, will you now do differently after hearing the seminar?</h3>
+			<input type="text" name="Q2" placeholder="Comments" required></br>
 				<p></p>
-			<input type="text" name="Q3" placeholder=" " required></br>
+			<h3>3. Can you suggest any improvements if we were to run a similar event in the future?</h3>
+			<input type="text" name="Q3" placeholder="Comments" required></br>
 				<p></p>
-			<input type="text" name="Q4" placeholder=" " required></br>
+			<h3>4. Would you like to see more of these sort of events in the future?</h3>
+			<input type="text" name="Q4" placeholder="Comments" required></br>
 				<p></p>
   			<select name="position" id="position" required> 
     				<option value="">Please select</option>
     				<option value="Undergrad">Undergraduate</option>
     				<option value="msc_taught">MSc (taught)</option> 
 				<option value="msc_research">MSc (research)</option>
-				<option value="phd">Phd</option> 
+				<option value="phd">Phd student</option> 
     				<option value="Postdoc">Postdoc (early career)</option>
     				<option value="Staff">Staff</option>
 			</select></br>
@@ -96,7 +99,7 @@
   			<input type="text" name="_gotcha" style="display:none" />
   			<button type="submit">Register</button>
   			<input type="hidden" name="_next" value="https://sdsruc.github.io/thank_you" />
-		</form> 
+		</form></center>
 	</div>
 </div>		
 
