--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <div id="main-wrap">
     <div id="sidebar">
 	    <!--<p align='justify'> Please register your interest to attend event by submitting the form below:</p>-->
-	    <p> Registration for tickets is now closed.
+	    <!--<p> Registration for tickets is now closed.
 		    If you registered your interest for a ticket you will be notified by email whether or not you were successful. 
 		    If successful you will also be emailed your ticket.
-	    </p> 
+	    </p>--> 
 	   <!-- <form method="POST" action="http://formspree.io/enter-email-address">
   			<input type="hidden" name="_subject" value="Temple Grandin Visit Ticket Request" />
 		    	<input type="hidden" name="_cc" value="enter Cc email address" />
@@ -55,8 +55,8 @@
 
     	<div id="content-wrap">
 		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center></br>
-		<h3>Welcome!</h3>
-		<p>SRUC warmly welcomes internationally renowned animal scientist Prof. Temple Grandin (<a href="http://www.templegrandin.com/">www.templegrandin.com</a>) for a very special seminar on Wednesday 15th of February.</p>
+		<h3>Hello!</h3>
+		<!--<p>SRUC warmly welcomes internationally renowned animal scientist Prof. Temple Grandin (<a href="http://www.templegrandin.com/">www.templegrandin.com</a>) for a very special seminar on Wednesday 15th of February.</p>
 		<p>Prof. Temple Grandin Seminar</br>
 			Date: Wednesday 15th</br> 
 			Time: 1500</br> 
@@ -65,7 +65,9 @@
 		<p>After this point it will be closed and tickets will be allocated to SRUC students across all categories as a priority, 
 			followed by SRUC staff and other students. </br>
 			Around this time you will receive confirmation of whether or not you have been successfully allocated a ticket.<p>
-
+-->		<p>Thank you for attending the Wednesday afternoon seminar given by Prof. Temple Grandin, we hope you enjoyed.
+	         If you would please mind taking a couple of minutes to fill in the questions below we can look to improve any 
+	         similar events given in the future.</p>
 		<p>Kind regards, </br> Steph &amp; Scott</p>
 		
 		  <center><form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
