--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<p></p>
   			<input type="text" name="_gotcha" style="display:none" />
   			<button type="submit">Register</button>
-  			<input type="hidden" name="_next" value="https://sdsruc.github.io/thank_you" />
+  			<input type="hidden" name="_next" value="https://sdsruc.github.io/thanks" />
 		</form></center>
 	</div>
 </div>		
