--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <div id="main-wrap">
-    <div id="sidebar">
+    <!--<div id="sidebar">-->
 	    <!--<p align='justify'> Please register your interest to attend event by submitting the form below:</p>-->
 	    <!--<p> Registration for tickets is now closed.
 		    If you registered your interest for a ticket you will be notified by email whether or not you were successful. 
@@ -51,9 +51,9 @@
   			<button type="submit">Register</button>
   			<input type="hidden" name="_next" value="https://sdsruc.github.io/registration_successful" />
 		</form> -->
-    </div>
+    <!--</div>-->
 
-    	<div id="content-wrap">
+    	<!--<div id="content-wrap">-->
 		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center></br>
 		<h3>Hello!</h3>
 		<!--<p>SRUC warmly welcomes internationally renowned animal scientist Prof. Temple Grandin (<a href="http://www.templegrandin.com/">www.templegrandin.com</a>) for a very special seminar on Wednesday 15th of February.</p>
@@ -75,16 +75,16 @@
 		    	<!--<input type="hidden" name="_cc" value="enter Cc email address" /> -->
 			<h3>1. Did today’s seminar meet your expectations? If yes, please let us know the main thing you learnt from the event, 
 				  if not please let us know the main reason why?</h3>
-			<textarea type="text" name="Q1" placeholder="Comments" rows="4" cols="45" required></br>
+			<textarea name="Q1" placeholder="Comments" rows="4" cols="45" required></textarea></br>
 				<p></p>
 			<h3>2. What, if anything, will you now do differently after hearing the seminar?</h3>
-			<textarea type="text" name="Q2" placeholder="Comments" rows="4" cols="45" required></br>
+			<textarea name="Q2" placeholder="Comments" rows="4" cols="45" required></textarea></br>
 				<p></p>
 			<h3>3. Can you suggest any improvements if we were to run a similar event in the future?</h3>
-			<textarea type="text" name="Q3" placeholder="Comments" rows="4" cols="45" required></br>
+			<textarea name="Q3" placeholder="Comments" rows="4" cols="45" required></textarea></br>
 				<p></p>
 			<h3>4. Would you like to see more of these sort of events in the future?</h3>
-			<textarea type="text" name="Q4" placeholder="Comments" rows="4" cols="45" required></br>
+			<textarea name="Q4" placeholder="Comments" rows="4" cols="45" required></textarea></br>
 				<p></p>
   			<select name="position" id="position" required> 
     				<option value="">Please select</option>
@@ -102,7 +102,7 @@
   			<button type="submit">Register</button>
   			<input type="hidden" name="_next" value="https://sdsruc.github.io/thanks" />
 		</form></center>
-	</div>
+	<!--</div>-->
 </div>		
 
 		
