--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!--</div>-->
 
     	<!--<div id="content-wrap">-->
-		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center></br>
+		<center><img src="img/Temple_Grandin_at_TED.jpg" width="301" height="277"></center><br/>
 		<h3>Hello!</h3>
 		<!--<p>SRUC warmly welcomes internationally renowned animal scientist Prof. Temple Grandin (<a href="http://www.templegrandin.com/">www.templegrandin.com</a>) for a very special seminar on Wednesday 15th of February.</p>
 		<p>Prof. Temple Grandin Seminar</br>
@@ -68,23 +68,23 @@
 -->		<p>Thank you for attending the Wednesday afternoon seminar given by Prof. Temple Grandin, we hope you enjoyed.
 	         If you would please mind taking a couple of minutes to fill in the questions below we can look to improve any 
 	         similar events given in the future.</p>
-		<p>Kind regards, </br> Steph &amp; Scott</p>
+		<p>Kind regards, <br/> Steph &amp; Scott</p><br/><br/>
 		
 		  <center><form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Temple Grandin - Post Seminar Survey" />
 		    	<!--<input type="hidden" name="_cc" value="enter Cc email address" /> -->
 			<h3>1. Did today’s seminar meet your expectations? If yes, please let us know the main thing you learnt from the event, 
 				  if not please let us know the main reason why?</h3>
-			<textarea name="Q1" placeholder="Comments" rows="4" cols="45" required></textarea></br>
+			<textarea name="Q1" placeholder="Comments" rows="4" cols="45" required></textarea><br/>
 				<p></p>
 			<h3>2. What, if anything, will you now do differently after hearing the seminar?</h3>
-			<textarea name="Q2" placeholder="Comments" rows="4" cols="45" required></textarea></br>
+			<textarea name="Q2" placeholder="Comments" rows="4" cols="45" required></textarea><br/>
 				<p></p>
 			<h3>3. Can you suggest any improvements if we were to run a similar event in the future?</h3>
-			<textarea name="Q3" placeholder="Comments" rows="4" cols="45" required></textarea></br>
+			<textarea name="Q3" placeholder="Comments" rows="4" cols="45" required></textarea><br/>
 				<p></p>
 			<h3>4. Would you like to see more of these sort of events in the future?</h3>
-			<textarea name="Q4" placeholder="Comments" rows="4" cols="45" required></textarea></br>
+			<textarea name="Q4" placeholder="Comments" rows="4" cols="45" required></textarea><br/>
 				<p></p>
   			<select name="position" id="position" required> 
     				<option value="">Please select</option>
@@ -94,9 +94,9 @@
 				<option value="phd">Phd student</option> 
     				<option value="Postdoc">Postdoc (early career)</option>
     				<option value="Staff">Staff</option>
-			</select></br>
+			</select><br/>
 			  <p></p>
-  			<input type="text" name="institution" placeholder="Your Institution" required></br>
+  			<input type="text" name="institution" placeholder="Your Institution" required><br/>
 				<p></p>
   			<input type="text" name="_gotcha" style="display:none" />
   			<button type="submit">Register</button>
