--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<div id="main-wrap">
 			<center><img src="img/SRUClogo.png" width="200" height="200">
 			<h1>SRUC Temple Grandin vist</h1>
-				</br>
-			<h2>Wednesday 14th Feb 2017 @ The Roslin Institute Building</h2>
+				<br/>
+				<h2>Wednesday 14th Feb 2017 @ The Roslin Institute Building</h2></center>
 		</div>
 
 
@@ -69,7 +69,7 @@
 	         If you would please mind taking a couple of minutes to fill in the questions below we can look to improve any 
 	         similar events given in the future.</p>
 		<p>Kind regards, <br/> Steph &amp; Scott</p><br/><br/>
-		
+		<p></p>
 		  <center><form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Temple Grandin - Post Seminar Survey" />
 		    	<!--<input type="hidden" name="_cc" value="enter Cc email address" /> -->
