--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
 		    	<!--<input type="hidden" name="_cc" value="enter Cc email address" /> -->
 			<h3>1. Did today’s seminar meet your expectations? If yes, please let us know the main thing you learnt from the event, 
 				  if not please let us know the main reason why?</h3>
-			<textarea name="Q1" placeholder="Comments" rows="4" cols="45" required></textarea><br/>
+			<textarea name="Q1" placeholder="Comments" rows="4" cols="45" required></textarea><br/><br/>
 				<p></p>
 			<h3>2. What, if anything, will you now do differently after hearing the seminar?</h3>
-			<textarea name="Q2" placeholder="Comments" rows="4" cols="45" required></textarea><br/>
+			<textarea name="Q2" placeholder="Comments" rows="4" cols="45" required></textarea><br/><br/>
 				<p></p>
 			<h3>3. Can you suggest any improvements if we were to run a similar event in the future?</h3>
-			<textarea name="Q3" placeholder="Comments" rows="4" cols="45" required></textarea><br/>
+			<textarea name="Q3" placeholder="Comments" rows="4" cols="45" required></textarea><br/><br/>
 				<p></p>
 			<h3>4. Would you like to see more of these sort of events in the future?</h3>
-			<textarea name="Q4" placeholder="Comments" rows="4" cols="45" required></textarea><br/>
+			<textarea name="Q4" placeholder="Comments" rows="4" cols="45" required></textarea><br/><br/>
 				<p></p>
   			<select name="position" id="position" required> 
     				<option value="">Please select</option>
@@ -94,9 +94,9 @@
 				<option value="phd">Phd student</option> 
     				<option value="Postdoc">Postdoc (early career)</option>
     				<option value="Staff">Staff</option>
-			</select><br/>
+			</select><br/><br/>
 			  <p></p>
-  			<input type="text" name="institution" placeholder="Your Institution" required><br/>
+  			<input type="text" name="institution" placeholder="Your Institution" required><br/><br/>
 				<p></p>
   			<input type="text" name="_gotcha" style="display:none" />
   			<button type="submit">Register</button>
