--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		  <center><form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
   			<input type="hidden" name="_subject" value="Temple Grandin - Post Seminar Survey" />
 		    	<!--<input type="hidden" name="_cc" value="enter Cc email address" /> -->
-			<h3>1. Did today’s seminar meet your expectations? If yes, please let us know the main thing you learnt from the event, 
+			<h3>1. Did today’s seminar meet your expectations?<br/>If yes, please let us know the main thing you learnt from the event, 
 				  if not please let us know the main reason why?</h3>
 			<textarea name="Q1" placeholder="Comments" rows="4" cols="45" required></textarea><br/><br/>
 				<p></p>
