--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			Around this time you will receive confirmation of whether or not you have been successfully allocated a ticket.<p>
 -->		<p>Thank you for attending the Wednesday afternoon seminar given by Prof. Temple Grandin, we hope you enjoyed.
 	         If you would please mind taking a couple of minutes to fill in the questions below we can look to improve any 
-	         similar events given in the future.</p>
+	similar events given in the future. We would like to <b>emphasise</b> that all comments are <b>completely anonymous</b>, the only personal data we collect is your institution and position (<i>e.g.</i>, undergrad, staff, etc.) </p>
 		<p>Kind regards, <br/> Steph &amp; Scott</p><br/><br/>
 		<p></p>
 		  <center><form method="POST" action="http://formspree.io/scott.denholm@sruc.ac.uk">
