--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</select><br/><br/>
 				<p></p>
   			<input type="text" name="_gotcha" style="display:none" />
-  			<button type="submit">Register</button>
+  			<button type="submit">Submit Feedback</button>
   			<input type="hidden" name="_next" value="https://sdsruc.github.io/thanks" />
 		</form></center>
 	<!--</div>-->
